--- a/LLM_Lab1.ipynb
+++ b/LLM_Lab1.ipynb
@@ -4,7 +4,15 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXYLu2cFv5woITyTXs+Ior",
+      "collapsed_sections": [
+        "RmvlKw03Nk2y",
+        "T-pEdHHCNvLV",
+        "QEKFFW5H-9aO",
+        "VOwNPfeH_XwD",
+        "Qt4xOVOS_8O1",
+        "gl8p49gXAoh2"
+      ],
+      "authorship_tag": "ABX9TyPEIpsskwTkCpXuRCe5e3Sq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7112,6 +7120,197 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Few Shot Inference"
+      ],
+      "metadata": {
+        "id": "XLyD_sGwR8N7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example_indices_full = [40, 80, 120]\n",
+        "example_index_to_summarize = 200\n",
+        "\n",
+        "few_shot_prompt = make_prompt(example_indices_full, example_index_to_summarize)\n",
+        "\n",
+        "print(few_shot_prompt)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m13G-SxZSDVj",
+        "outputId": "99ef7fbe-32b2-4421-aeff-4aba7b4fd2cf"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Dialogue:\n",
+            "\n",
+            "#Person1#: What time is it, Tom?\n",
+            "#Person2#: Just a minute. It's ten to nine by my watch.\n",
+            "#Person1#: Is it? I had no idea it was so late. I must be off now.\n",
+            "#Person2#: What's the hurry?\n",
+            "#Person1#: I must catch the nine-thirty train.\n",
+            "#Person2#: You've plenty of time yet. The railway station is very close. It won't take more than twenty minutes to get there.\n",
+            "\n",
+            "What was going on?\n",
+            "#Person1# is in a hurry to catch a train. Tom tells #Person1# there is plenty of time.\n",
+            "\n",
+            "\n",
+            "\n",
+            "Dialogue:\n",
+            "\n",
+            "#Person1#: May, do you mind helping me prepare for the picnic?\n",
+            "#Person2#: Sure. Have you checked the weather report?\n",
+            "#Person1#: Yes. It says it will be sunny all day. No sign of rain at all. This is your father's favorite sausage. Sandwiches for you and Daniel.\n",
+            "#Person2#: No, thanks Mom. I'd like some toast and chicken wings.\n",
+            "#Person1#: Okay. Please take some fruit salad and crackers for me.\n",
+            "#Person2#: Done. Oh, don't forget to take napkins disposable plates, cups and picnic blanket.\n",
+            "#Person1#: All set. May, can you help me take all these things to the living room?\n",
+            "#Person2#: Yes, madam.\n",
+            "#Person1#: Ask Daniel to give you a hand?\n",
+            "#Person2#: No, mom, I can manage it by myself. His help just causes more trouble.\n",
+            "\n",
+            "What was going on?\n",
+            "Mom asks May to help to prepare for the picnic and May agrees.\n",
+            "\n",
+            "\n",
+            "\n",
+            "Dialogue:\n",
+            "\n",
+            "#Person1#: Hello, I bought the pendant in your shop, just before. \n",
+            "#Person2#: Yes. Thank you very much. \n",
+            "#Person1#: Now I come back to the hotel and try to show it to my friend, the pendant is broken, I'm afraid. \n",
+            "#Person2#: Oh, is it? \n",
+            "#Person1#: Would you change it to a new one? \n",
+            "#Person2#: Yes, certainly. You have the receipt? \n",
+            "#Person1#: Yes, I do. \n",
+            "#Person2#: Then would you kindly come to our shop with the receipt by 10 o'clock? We will replace it. \n",
+            "#Person1#: Thank you so much. \n",
+            "\n",
+            "What was going on?\n",
+            "#Person1# wants to change the broken pendant in #Person2#'s shop.\n",
+            "\n",
+            "\n",
+            "\n",
+            "Dialogue:\n",
+            "\n",
+            "#Person1#: Have you considered upgrading your system?\n",
+            "#Person2#: Yes, but I'm not sure what exactly I would need.\n",
+            "#Person1#: You could consider adding a painting program to your software. It would allow you to make up your own flyers and banners for advertising.\n",
+            "#Person2#: That would be a definite bonus.\n",
+            "#Person1#: You might also want to upgrade your hardware because it is pretty outdated now.\n",
+            "#Person2#: How can we do that?\n",
+            "#Person1#: You'd probably need a faster processor, to begin with. And you also need a more powerful hard disc, more memory and a faster modem. Do you have a CD-ROM drive?\n",
+            "#Person2#: No.\n",
+            "#Person1#: Then you might want to add a CD-ROM drive too, because most new software programs are coming out on Cds.\n",
+            "#Person2#: That sounds great. Thanks.\n",
+            "\n",
+            "What was going on?\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "summary = dataset['test'][example_index_to_summarize]['summary']\n",
+        "\n",
+        "inputs = tokenizer(few_shot_prompt, return_tensors='pt')\n",
+        "output = tokenizer.decode(\n",
+        "    model.generate(\n",
+        "        inputs[\"input_ids\"],\n",
+        "        max_new_tokens=50,\n",
+        "    )[0],\n",
+        "    skip_special_tokens=True\n",
+        ")\n",
+        "\n",
+        "print(dash_line)\n",
+        "print(f'BASELINE HUMAN SUMMARY:\\n{summary}\\n')\n",
+        "print(dash_line)\n",
+        "print(f'MODEL GENERATION - FEW SHOT:\\n{output}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wFm0JqheS19T",
+        "outputId": "de310675-4e6b-4db6-8699-e1d0c1c9f7ed"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Token indices sequence length is longer than the specified maximum sequence length for this model (819 > 512). Running this sequence through the model will result in indexing errors\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------------------------------------------------------------------------------------------------\n",
+            "BASELINE HUMAN SUMMARY:\n",
+            "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
+            "\n",
+            "---------------------------------------------------------------------------------------------------\n",
+            "MODEL GENERATION - FEW SHOT:\n",
+            "#Person1 wants to upgrade his system. #Person2 wants to add a painting program to his software. #Person1 wants to upgrade his hardware.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Generative Configuration Parameters for Inference\n",
+        "\n",
+        "Change the configuration parameters to investigate their influence on the output."
+      ],
+      "metadata": {
+        "id": "Wnu0CyLMTaiw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "generation_config = GenerationConfig(max_new_tokens=50)\n",
+        "# generation_config = GenerationConfig(max_new_tokens=10)\n",
+        "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=0.1)\n",
+        "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=0.5)\n",
+        "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=1.0)\n",
+        "\n",
+        "inputs = tokenizer(few_shot_prompt, return_tensors='pt')\n",
+        "output = tokenizer.decode(\n",
+        "    model.generate(\n",
+        "        inputs[\"input_ids\"],\n",
+        "        generation_config=generation_config,\n",
+        "    )[0],\n",
+        "    skip_special_tokens=True\n",
+        ")\n",
+        "\n",
+        "print(dash_line)\n",
+        "print(f'MODEL GENERATION - FEW SHOT:\\n{output}')\n",
+        "print(dash_line)\n",
+        "print(f'BASELINE HUMAN SUMMARY:\\n{summary}\\n')"
+      ],
+      "metadata": {
+        "id": "dacNAtkXTaHU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
