final commit for lab 1

--- a/LLM_Lab1.ipynb
+++ b/LLM_Lab1.ipynb
@@ -12,7 +12,7 @@
         "Qt4xOVOS_8O1",
         "gl8p49gXAoh2"
       ],
-      "authorship_tag": "ABX9TyPEIpsskwTkCpXuRCe5e3Sq",
+      "authorship_tag": "ABX9TyMPJAMIyqypUKYcRnYZufdU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7286,11 +7286,11 @@
     {
       "cell_type": "code",
       "source": [
-        "generation_config = GenerationConfig(max_new_tokens=50)\n",
+        "# generation_config = GenerationConfig(max_new_tokens=50)\n",
         "# generation_config = GenerationConfig(max_new_tokens=10)\n",
         "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=0.1)\n",
         "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=0.5)\n",
-        "# generation_config = GenerationConfig(max_new_tokens=50, do_sample=True, temperature=1.0)\n",
+        "generation_config = GenerationConfig(max_new_tokens=120, do_sample=True, temperature=1.0)\n",
         "\n",
         "inputs = tokenizer(few_shot_prompt, return_tensors='pt')\n",
         "output = tokenizer.decode(\n",
@@ -7307,10 +7307,38 @@
         "print(f'BASELINE HUMAN SUMMARY:\\n{summary}\\n')"
       ],
       "metadata": {
-        "id": "dacNAtkXTaHU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dacNAtkXTaHU",
+        "outputId": "50675617-b527-4833-e8b4-cbbb61a398f5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------------------------------------------------------------------------------------------------\n",
+            "MODEL GENERATION - FEW SHOT:\n",
+            "#Person1 suggests that people consider upgrading their system and adding a painting program or adding Windows software to their system.\n",
+            "---------------------------------------------------------------------------------------------------\n",
+            "BASELINE HUMAN SUMMARY:\n",
+            "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "(max_new_tokens=50, do_sample=True, temperature=1.0) this configuration worked better among others.\n",
+        "tokens = 200 summed it up better with some mistakes. token = 120 got the context better than the others but still have mistakes.\n"
+      ],
+      "metadata": {
+        "id": "wBjEB8wtVNlu"
+      }
     }
   ]
 }
