--- a/LLM_Lab1.ipynb
+++ b/LLM_Lab1.ipynb
@@ -12,7 +12,7 @@
         "Qt4xOVOS_8O1",
         "gl8p49gXAoh2"
       ],
-      "authorship_tag": "ABX9TyMPJAMIyqypUKYcRnYZufdU",
+      "authorship_tag": "ABX9TyPx05IaibT7XKTa0h7O4WL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7304,7 +7304,9 @@
         "print(dash_line)\n",
         "print(f'MODEL GENERATION - FEW SHOT:\\n{output}')\n",
         "print(dash_line)\n",
-        "print(f'BASELINE HUMAN SUMMARY:\\n{summary}\\n')"
+        "print(f'BASELINE HUMAN SUMMARY:\\n{summary}\\n')\n",
+        "\n",
+        "# end of the labwork 1"
       ],
       "metadata": {
         "colab": {
